--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>title</title>
+        <title>Fear him, for he knoweth no mercy.</title>
         <style>
             body {
                 width: 100%;
@@ -13,8 +13,8 @@
 
             img {
                 display: block;
-                width: 100%;
-                height: 100%;
+                max-width: 100%;
+                max-height: 100%;
             }
         </style>
     </head>
